--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <link rel="stylesheet" href="./src/styles/style.css">
 
-  <title>get.Coffe</title>
+  <link rel="shortcut icon" href="./src/assets/svg/logo.svg" type="image/x-icon">
+
+  <title>getcoffe</title>
 </head>
 
 <body>
