--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" href="./src/assets/svg/logo.svg" type="image/x-icon">
 
-  <title>getcoffe</title>
+  <title>getcoffee</title>
 </head>
 
 <body>
