--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#logo">
         <img src="./src/assets/svg/logo.svg" alt="Logo getcoffe">
       </a>
-      <h1>get.coffe</h1>
+      <h1>get.coffee</h1>
     </div>
 
     <nav>
