--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
 
     <nav>
       <ul>
-        <li><a href="#menu">menu</a></li>
-        <li><a href="#contact">contact</a></li>
-        <li><a href="#find-us">find us</a></li>
+        <li>
+          <a href="#menu">menu</a>
+        </li>
+
+        <li>
+          <a href="#contact">contact</a>
+        </li>
+
+        <li>
+          <a href="#find-us">find us</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -41,28 +49,38 @@
         </div>
 
         <div class="coffee-content-button">
-          <button>make your order</button>
+          <button>
+            <a href="#order">make your order</a>
+          </button>
         </div>
 
         <div class="coffee-content-social-medias">
           <div class="container-social-medias">
             <div>
-              <img src="./src/assets/svg/instagram.svg" alt="Instagram">
+              <a href="#instagram">
+                <img src="./src/assets/svg/instagram.svg" alt="Icone do Instagram">
+              </a>
             </div>
 
             <div>
-              <img src="./src/assets/svg/linkedin.svg" alt="Linkedin">
+              <a href="#linkedin">
+                <img src="./src/assets/svg/linkedin.svg" alt="Icone do Linkedin">
+              </a>
             </div>
 
             <div>
-              <img src="./src/assets/svg/twitter.svg" alt="Twitter">
+              <a href="#twitter">
+                <img src="./src/assets/svg/twitter.svg" alt="Icone do Twitter">
+              </a>
             </div>
           </div>
         </div>
       </div>
 
       <div class="coffee-img">
-        <img src="./src/assets/img/coffee.png" alt="Copo de café da getcoffe">
+        <a href="#coffe">
+          <img src="./src/assets/img/coffee.png" alt="Copo de café da getcoffe">
+        </a>
       </div>
     </section>
   </main>
